# LegacyMyLibs

./: .gitignore  README.md
Effect/: CMakeLists.txt  ReadMe.txt  effect.cpp  effect.h  glstate.cpp  glstate.h  shadermanager.cpp  shadermanager.h  stdafx.cpp
GLBase/: CMakeLists.txt  sdlgl.cpp  sdlgl.hpp  streamingmanager.cpp  streamingmanager.h  texture.cpp  texture.hpp  triangleset.cpp  triangleset.hpp  vertexset.cpp  vertexset.hpp  vertexspec.hpp  videomemorymanager.cpp  videomemorymanager.hpp  vramobject.cpp  vramobject.hpp
HPCLib/: CMakeLists.txt  OpenCLWrappers.cpp  OpenCLWrappers.h  OpenCLWrappers.inl  ReadMe.txt  files.txt
HPCNoise/: CMakeLists.txt  ReadMe.txt  perlin.cpp  perlin.hpp  perlin.inl  shader_base.cl  shader_base.inl
Math/: CMakeLists.txt  aabb.hpp  atmospheric.hpp  atmospheric.inl  boundingsphere.hpp  constants.hpp  frustum.hpp  intersection.hpp  matrix3.hpp  matrix4.hpp  misc.hpp  perlin.hpp  perlin.inl  plane.hpp  quaternion.hpp  ray.hpp  rectangle.hpp  ridgedmultifractal.hpp  ridgedmultifractal.inl  spatialnoise.hpp  spatialnoise.inl  sse_utils.hpp  transformation.hpp  utils.h  vector2.hpp  vector3.hpp  vector4.hpp
Misc/: CMakeLists.txt  functions.hpp  rangelist.hpp  statemachine.hpp  timer.h
Remote/: CMakeLists.txt  RemoteDebug.cpp  RemoteDebug.h
Render/: CMakeLists.txt  composed_geometryset.h  fontgl.cpp  fontgl.h  fontgl.hpp  geometryset.h  gui_renderstage.hpp  imposterable.h  memorymanager.hpp  meshtransformset.hpp  rendercontext.cpp  rendercontext.h  rendercontext.hpp  rendergl.cpp  rendergl.h  rendergl_2.cpp  rendergl_2.h  renderstage.hpp  scenecontext.hpp  sdlgl.hpp  semantic_param_set.cpp  semantic_param_set.hpp  texture.hpp  utils_screen_space.cpp  utils_screen_space.h  utils_screen_space.inl
Scene/: CMakeLists.txt  ReadMe.txt  animation.hpp  camera.hpp  coordtraits.hpp  drawable.hpp  geometry.hpp  group.hpp  light.hpp  material.cpp  material.hpp  matrixtraits.hpp  mesh.hpp  meshtransform.hpp  param_binder.hpp  scene_types.hpp  scene_utils.hpp  sgclipmap.hpp  shader.cpp  shader.hpp  shader.inl  transform.hpp  viewport.hpp
Ugly/: CMakeLists.txt  ProcessQueue.cpp  ProcessRedirect.cpp  QtUtils.h  VerticalScrollArea.cpp  VerticalScrollArea.h  wait_handle.h
Utils/: CMakeLists.txt  Profiler.cpp  Profiler.h  WaitHandle.cpp  on_scope_exit.h  stl_algorithm_wrappers.h  time_type.h  unique_vector.h
Vice/: CMakeLists.txt  boost_python_wrapper.h  component.cpp  component.h  context.cpp  context.h  element.cpp  element.h  layer.cpp  layer.h  logging.cpp  logging.h  object.cpp  object.h  renderer.cpp  renderer.h  renderer_base.h  script.cpp  script.h  script_stub.cpp  solution.cpp  solution.h  template.cpp  template.h  vice.cpp  vice.h  xml_utils.cpp  xml_utils.h
Vice/ViceTest/: CMakeLists.txt  main.cpp  test.py  test.xml  test2.py  test2.xml
Vice/shaders/: basic_font_shader.xml  basic_font_shader_fs.glsl  basic_font_shader_vs.glsl  element_shader.xml  element_shader_texture.xml  element_shader_texture_fs.glsl  selection_shader.xml  stencil_shader.xml  stencil_shader_fs.glsl  stencil_shader_vs.glsl
fbo/: CMakeLists.txt  ReadMe.txt  fbo.icproj  framebufferObject.cpp  framebufferObject.h  renderbuffer.cpp  renderbuffer.h
gltext/: CMakeLists.txt  gltext.cpp  gltext.h
gltext/harfbuzz/: hb-buffer-private.hh  hb-buffer.cc  hb-common.cc  hb-common.h  hb-open-type-private.hh  hb-ot-layout-gsub-table.hh  hb-ot-tag.cc  hb-private.hh  hb-shape.cc
hpalib/: CMakeLists.txt
hpalib/src/: atox.c  prcxpr.c  print.c
